--- a/ablock-web/Dockerfile
+++ b/ablock-web/Dockerfile
@@ -2,6 +2,7 @@ FROM node:8-slim
 RUN apt-get update  && apt-get install -y nginx
 WORKDIR /usr/src/app
 COPY ["package.json",  "./"]
+RUN npm cache clean --force
 RUN npm install
 COPY . .
 RUN npm run build
